Security/03-Ingress-Gateway-TLS/frontend/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  hosts:
  - "fe.magedu.com"
  - "frontend.magedu.com"
  gateways:
  - frontend-gateway
  - mesh
  http:
  - name: default
    route:
    - destination:
        host: frontend
        port:
          number: 80 
---
