Security/03-Ingress-Gateway-TLS/frontend/virtualservice-proxy.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: proxy
  namespace: default
spec:
  hosts:
  - "fe.magedu.com"
  - "frontend.magedu.com"
  gateways:
  - istio-system/proxy-gateway
  - mesh
  http:
  - name: default
    route:
    - destination:
        host: proxy
        port:
          number: 80 
---
